Integrated OTPInputField into OTPVerificationScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pin_code_fields: ^8.0.1  # For OTp input fields
   cupertino_icons: ^1.0.0 # Add your specific version
   curved_navigation_bar: ^1.0.3 
   flutter_map: ^5.0.0
   latlong2: 0.9.1
 
+
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/map.jpg
-
+    - lib/assets/images/otp-security.png
 
 dev_dependencies:
   flutter_test:
